--- a/WebTemplate.html
+++ b/WebTemplate.html
@@ -116,7 +116,7 @@
                     </a>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="./secondClassic.html" class="dhlStyle" target="layui-body-iframe">
+                    <a href="./contactInfo.html" class="dhlStyle" target="layui-body-iframe">
                         <i class="layui-icon layui-icon-note iconStyle"></i>
                         联系我们
                     </a>
