--- a/main.html
+++ b/main.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" type="text/css" href="font_Icon/iconfont.css">
     <link rel="stylesheet" type="text/css" href="layui/css/chat.css">
     <link rel="stylesheet" href="layui/css/layui.css">
-	<link rel="stylesheet" href="layui/css/modules/layer/default/layer.css">
+    <link rel="stylesheet" href="layui/css/modules/layer/default/layer.css">
+    <link rel="icon" href="./img/favicon.ico">
 	<script src="layui/layui.js"></script>
 	<script src="js/jquery.min.js"></script>
 	<script src="layui/lay/modules/layer.js"></script>
