--- a/WebTemplate.html
+++ b/WebTemplate.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>湖南华晟会计师事务所</title>
     <link rel="stylesheet" href="layui/css/layui.css">
+    <link rel="icon" href="./img/favicon.ico">
 	<script src="layui/layui.js"></script>
 	<script src="js/jquery.min.js"></script>
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
