--- a/main.html
+++ b/main.html
@@ -93,22 +93,19 @@
 
     <div>
         <!-- 轮播图  -->
-        <div style="text-align: center;width: 100%;margin: 0 auto;text-align: center;">
+        <div style="text-align: center;width: 100%;margin: 0 auto;text-align: center;z-index: 1;position: fixed;">
             <div style="text-align: center;width:100%;margin: 0 auto">
                 <div class="layui-carousel" id="test1" lay-anim lay-indicator="inside" lay-arrow="always"
                     style="text-align: center;margin-top:0px;width:100%;">
                     <div carousel-item>
                         <div style="text-align: center;">
-                            <img src="img/banner1.jpg" style="width: 100%;">
+                            <img src="img/banner1.png" style="width: 100%;">
                         </div>
                         <div style="text-align: center;">
                             <img src="img/banner2.jpg" style="width: 100%;">
                         </div>
                         <div style="text-align: center;">
                             <img src="img/banner3.jpg" style="width: 100%;">
-                        </div>
-                        <div style="text-align: center;">
-                            <img src="img/banner4.jpg" style="width: 100%;">
                         </div>
                     </div>
                 </div>
@@ -120,77 +117,55 @@
                 var carousel = layui.carousel;
                 //建造实例
                 carousel.render({
+                    full:'true',
                     elem: '#test1',
-                    width: '100%' ,//设置容器宽度
-                    height: '340px',
+                    width: 'window.innerWidth' ,//设置容器宽度
+                    // height: '530px',
                     arrow: 'hover' //悬停显示箭头
                     //,anim: 'updown' //切换动画方式
                 });
             });
         </script>
-
-        <!-- 尾部信息 -->
-        <!-- <div class="layui-card "
-            style="width:100%; height: 150px; border: #9F9F9F;margin:20px auto;text-align: center;background-color: #01AAED">
-
-            <div class="layui-row">
-                <div class="layui-col-md8 layui-col-md-offset2">
-                    <div class="layui-row grid-demo grid-demo-bg1">
-                        <div class="layui-col-md3">
-                            <div class="layui-row" style="text-align: center;padding: 12%;">
-                                <a href="./thirdInfo_addr.html">
-                                    <i class="layui-icon layui-icon-location"
-                                        style="font-size: 50px; color: #ffffff;"></i> <br>
-                                    <div class="clzalaStyle" style="height: 100%;">
-                                        地址
+        <div class="chatContainer" style="z-index:999; float: right;position: absolute;">
+            <div class="chatBtn" onclick="">
+                <i class="iconfont icon-xiaoxi1"></i>
+            </div>
+            <div class="chatBox" ref="chatBox" style="display:none">
+                <div class="chatBox-head">
+                    <div class="chatBox-head-one">
+                        消息
+                        <div class="chat-close" style="margin: 10px 10px 0 0;font-size: 14px">关闭</div>
+                    </div>
+                </div>
+                <div class="chatBox-info">
+                    <div class="chatBox-list" ref="chatBoxkuang">
+                        <div class="chatBox-content">
+                            <div class="chatBox-content-demo" id="chatBox-content-demo">
+                                <div class="clearfloat">
+                                    <div class="left">
+                                        <div class="chat-message">
+                                            您好，这里是湖南华晟会计师事务所，请问有什么需要帮助？
+                                        </div>
                                     </div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="layui-col-md3">
-                            <div class="layui-row" style="text-align: center;padding: 12%;">
-                                <a href="./thirdInfo_email.html">
-                                    <i class="layui-icon layui-icon-email" style="font-size: 50px; color: #ffffff;"></i>
-                                    <br>
-                                    <div class="clzalaStyle" style="height: 100%;">
-                                        电子邮箱
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="layui-col-md3">
-                            <div class="layui-row" style="text-align: center;padding: 12%;">
-                                <a href="./thirdInfo_tel.html">
-                                    <i class="layui-icon layui-icon-service"
-                                        style="font-size: 50px; color: #ffffff;"></i>
-                                    <br>
-                                    <div class="clzalaStyle" style="height: 100%;">
-                                        联系电话
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="layui-col-md3">
-                            <div class="layui-row" style="text-align: center;padding: 12%;">
-                                <a href="./thirdInfo_qq.html">
-                                    <i class="layui-icon layui-icon-login-qq"
-                                        style="font-size: 50px; color: #ffffff;"></i>
-                                    <br>
-                                    <div class="clzalaStyle" style="height: 100%;" >
-                                        QQ
-                                    </div>
-                                </a>
+                                </div>
                             </div>
                         </div>
                     </div>
-
                 </div>
+                <div class="chatBox-bottom">
+                    <div class="chatBox-send">
+                        <div class="div-textarea" contenteditable="true"></div>
+                        <button id="chat-fasong" class="btn-default-styles">
+                            发送信息
+                        </button>
+                    </div>
+                </div>
+                
             </div>
-        </div> -->
-
+        </div>
     </div>
 
-    <div class="chatContainer">
+    <div class="chatContainer" style="float: right;">
         <div class="chatBtn" onclick="">
             <i class="iconfont icon-xiaoxi1"></i>
         </div>
