--- a/main.html
+++ b/main.html
@@ -226,12 +226,13 @@
             $(document).ready(function () {
                 $("#chatBox-content-demo").scrollTop($("#chatBox-content-demo")[0].scrollHeight);
             });
-            // $.get(
-            //     url, 
-            //     reply.connect,
-            //     function(data){
-            //         alert("Data Loaded: " + data);
-            //     });
+            $.ajax({
+                type: 'POST',
+                url: '/QandA',
+                data: textContent,
+                success: reply.connect=data.answer,
+                dataType: json
+            });
             $(".chatBox-content-demo").append("<div class=\"clearfloat\">" +
                 "<div class=\"left\"> <div class=\"chat-message\"> " + reply.connect + " </div> " +
                 " </div> </div>");
