--- a/WebTemplate.html
+++ b/WebTemplate.html
@@ -94,49 +94,37 @@
                     style="height:50px;width:100px;padding: 0;display:inline-block;*display:inline;*zoom:1;vertical-align:middle;">
                     <!-- logo -->
 <!--                    <i class="layui-icon layui-icon-app" style="font-size: 40px; color: #C4C0C1;"></i>-->
-                    <img src="./img/logoWithBack.png" style="width:100%;height:100%">
+                    <img src="/img/logoWithBack.png" style="width:100%;height:100%">
                 </li>
 
                 <li class="layui-nav-item ">
-                    <a href="./main.html" class="dhlStyle" target="layui-body-iframe">
+                    <a href="/main" class="dhlStyle" target="layui-body-iframe">
                         <i class="layui-icon layui-icon-home iconStyle"></i>
                         首页
                     </a>
                 </li>
                 <li class="layui-nav-item">
 
-                    <a href="./businessScope.html" class="dhlStyle" target="layui-body-iframe">
+                    <a href="/businessScope" class="dhlStyle" target="layui-body-iframe">
                         <i class="layui-icon layui-icon-senior iconStyle"></i>
                         关于我们
                     </a>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="./secondPeople.html" class="dhlStyle" target="layui-body-iframe">
+                    <a href="/certificate" class="dhlStyle" target="layui-body-iframe">
                         <i class="layui-icon layui-icon-username iconStyle"></i>
                         资质证书
                     </a>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="./contactInfo.html" class="dhlStyle" target="layui-body-iframe">
+                    <a href="/contactInfo" class="dhlStyle" target="layui-body-iframe">
                         <i class="layui-icon layui-icon-note iconStyle"></i>
                         联系我们
                     </a>
                 </li>
-                <!-- <li class="layui-nav-item">
-                    <a href="./caseInProcess2.html" class="dhlStyle" target="layui-body-iframe">
-                        <i class="layui-icon layui-icon-survey iconStyle"></i>
-                        处理中案例
-                    </a>
-                </li>
-                <li class="layui-nav-item">
-                    <a href="./contactInfo.html" class="dhlStyle" target="layui-body-iframe">
-                        <i class="layui-icon layui-icon-dialogue iconStyle"></i>
-                        联系我们
-                    </a>
-                </li> -->
                 <li class="layui-nav-item">
                     <button type="button" class="layui-btn layui-btn-normal"
-                        onclick="javascrtpt:window.location.href='./login'">
+                        onclick="javascrtpt:window.location.href='/login'">
                         登录
                     </button>
                 </li>
@@ -153,7 +141,7 @@
     <!-- 内容主体区域 -->
     <div  style="height:90vh;margin:0 auto;text-align: center;">
         <!-- css样式overflow:hidden表示溢出隐藏 -->
-        <iframe src="./main.html" name="layui-body-iframe" marginwidth="0" marginheight="0" scrolling="yes"
+        <iframe src="/main" name="layui-body-iframe" marginwidth="0" marginheight="0" scrolling="yes"
             frameborder="0" height="100%" width="100%" >
             
         </iframe>
