--- a/certificate.html
+++ b/certificate.html
@@ -150,13 +150,12 @@
 </head>
 
 <body style="width:90%;margin: 0 auto;">
-    <div class="layui-layout-admin ">
+
+    <!-- <div class="layui-layout-admin ">
 
         <ul class="layui-nav layui-bg-blue" lay-filter="" style="text-align: center;">
             <li
                 style="height:50px;width:100px;padding: 0;display:inline-block;*display:inline;*zoom:1;vertical-align:middle;">
-                <!-- logo -->
-                <!--                    <i class="layui-icon layui-icon-app" style="font-size: 40px; color: #C4C0C1;"></i>-->
                 <img src="./img/logoWithBack.png" style="width:100%;height:100%">
             </li>
 
@@ -168,35 +167,23 @@
             </li>
             <li class="layui-nav-item">
 
-                <a href="./businessScope.html" class="dhlStyle" target="layui-body-iframe">
+                <a href="./businessScope" class="dhlStyle" target="layui-body-iframe">
                     <i class="layui-icon layui-icon-senior iconStyle"></i>
                     关于我们
                 </a>
             </li>
             <li class="layui-nav-item">
-                <a href="./secondPeople.html" class="dhlStyle" target="layui-body-iframe">
+                <a href="./secondPeople" class="dhlStyle" target="layui-body-iframe">
                     <i class="layui-icon layui-icon-username iconStyle"></i>
                     资质证书
                 </a>
             </li>
             <li class="layui-nav-item">
-                <a href="./contactInfo.html" class="dhlStyle" target="layui-body-iframe">
+                <a href="./contactInfo" class="dhlStyle" target="layui-body-iframe">
                     <i class="layui-icon layui-icon-note iconStyle"></i>
                     联系我们
                 </a>
             </li>
-            <!-- <li class="layui-nav-item">
-                <a href="./caseInProcess2.html" class="dhlStyle" target="layui-body-iframe">
-                    <i class="layui-icon layui-icon-survey iconStyle"></i>
-                    处理中案例
-                </a>
-            </li>
-            <li class="layui-nav-item">
-                <a href="./contactInfo.html" class="dhlStyle" target="layui-body-iframe">
-                    <i class="layui-icon layui-icon-dialogue iconStyle"></i>
-                    联系我们
-                </a>
-            </li> -->
             <li class="layui-nav-item">
                 <button type="button" class="layui-btn layui-btn-normal"
                     onclick="javascrtpt:window.location.href='./login'">
@@ -204,15 +191,14 @@
                 </button>
             </li>
         </ul>
-
-        <!--导航条JS-->
         <script>
             //注意：导航 依赖 element 模块，否则无法进行功能性操作
             layui.use('element', function () {
                 var element = layui.element;
             });
         </script>
-    </div>
+    </div> -->
+
     <div class="content">
         <h1>资质证书</h1>
 
@@ -248,52 +234,6 @@
 
         <div class="hline"></div>
     </div>
-
-    <!-- <footer class="footer section">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-3 col-md-6 mt-40">
-                    <h4 class="font-w-600 text-uppercase text-white mb-30">经营地址</h4>
-                    <p class="mb-10">长沙市芙蓉中路二段98号明城国际中心1916、1918室</p> -->
-    <!-- <p class="mb-10">Town. Office No 3456</p>
-                    <p class="mb-10">info@example.com</p> -->
-    <!-- <p>234-5825852763</p>
-                </div>
-                <div class="col-xl-3 col-md-6 mt-40">
-                    <h4 class="font-w-600 text-uppercase text-white mb-30">经营业务范围</h4>
-                    <ul class="footer-links list-unstyled">
-                        <li><a href="#!">审计业务</a></li>
-                        <li><a href="#!">税务业务</a></li>
-                        <li><a href="#!">工程造价业务</a></li>
-                        <li><a href="#!">咨询业务</a></li>
-                    </ul>
-                </div>
-                <div class="col-xl-3 col-md-6 mt-40">
-                    <h4 class="font-w-600 text-uppercase text-white mb-30">设立</h4>
-                    <ul class="footer-links list-unstyled">
-                        <li><a href="#!">财务审计业务部</a></li>
-                        <li><a href="#!">税务鉴证业务部</a></li>
-                        <li><a href="#!">工程审计业务部</a></li>
-                        <li><a href="#!">管理咨询业务部</a></li>
-                        <li><a href="#!">行政综合部</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <div class="footer-bottom">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 text-center">
-                    <p>Copyright @ ITcom 2020 All Right Reserved</p>
-                </div>
-            </div>
-        </div>
-
-        <a href="#top" class="scroll-to-top">
-            <span class="fas fa-chevron-up"></span>
-        </a>
-    </div> -->
 </body>
 
 </html>
