--- a/contactInfo.html
+++ b/contactInfo.html
@@ -97,7 +97,7 @@
     <div style="padding: 20px; background-color: #1E9FFF;">
         <div class="layui-card">
         <div class="layui-card-header">
-            <h1 style="margin: 0 auto">湖南华晟会计师事务所联系方式</h1><br><br>
+            <h1 style="margin: 0 auto">湖南华晟会计师事务所（普通合伙）</h1><br><br>
         </div>
       </div>
     </div>
@@ -111,9 +111,8 @@
             <div class="layui-colla-content layui-show">0731-88759955</div>
         </div>
         <div class="layui-colla-item">
-            <h2 class="layui-colla-title">开户银行</h2>
-            <div class="layui-colla-content layui-show">中国工商银行长沙市韶山路支行窑岭分理处<br>
-                银行账号：1901007609201001463</div>
+            <h2 class="layui-colla-title">传真信息</h2>
+            <div class="layui-colla-content layui-show">传真号：0731-88936392</div>
         </div>
         <div class="layui-colla-item">
             <h2 class="layui-colla-title">其他信息</h2>
